--- a/src/html/ flatMap.html
+++ b/src/html/ flatMap.html
@@ -1,30 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FlatMap</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <script>
-      const arry = [
-        'hello',
-        ['1', 2, '3'],
-        [4, 5, ['js', 'vue', ['vue', 'vuex']]]
-      ]
-      flatArry = (arr) => {
-        let result = []
-        for (let i = 0; i < arr.length; i++) {
-          if (Array.isArray(arr[i])) {
-            result.push(...flatArry(arr[i]))
-          } else {
-            result.push(arr[i])
-          }
-        }
-        return result
-      }
-      console.log(flatArry(arry))
+        const arry = [
+            "hello",
+            ["1", 2, "3"],
+            [4, 5, ["js", "vue", ["vue", "vuex"]]]
+        ];
+        flatArry = (arr) => {
+            let result = [];
+            for (let i = 0; i < arr.length; i++) {
+                if (Array.isArray(arr[i])) {
+                    result.push(...flatArry(arr[i]));
+                } else {
+                    result.push(arr[i]);
+                }
+            }
+            return result;
+        };
+        console.log(flatArry(arry));
     </script>
-  </body>
+</body>
+
 </html>
