--- a/src/html/虚拟dom.html
+++ b/src/html/虚拟dom.html
@@ -1,27 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>虚拟dom</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>虚拟dom</title>
-</head>
-
-<body>
-  <h2>1、虚拟dom是什么</h2>
-  <p>a、vue2.x才有的虚拟dom</p>
-  <p>b、本质就是一个js对象 具备跨平台的特性</p>
-  <h2>2、虚拟dom在vue中做了什么</h2>
-  <p>a、vue的整个渲染过程</p>
-  <p>b、1、将真实dom转换为虚拟dom 2、更新的时候做对比</p>
-  <p>c、</p>
-  <h2>3、虚拟dom是如何提升vue的渲染效率的？</h2>
-  <p>1、局部更新（节点数据）</p>
-  <p>2、将直接操作dom的地方拿到两个js对象</p>
-  <script>
-
-  </script>
-</body>
-
+  <body>
+    <h2>1、虚拟dom是什么</h2>
+    <p>a、vue2.x才有的虚拟dom</p>
+    <p>b、本质就是一个js对象 具备跨平台的特性</p>
+    <h2>2、虚拟dom在vue中做了什么</h2>
+    <p>a、vue的整个渲染过程</p>
+    <p>b、1、将真实dom转换为虚拟dom 2、更新的时候做对比</p>
+    <p>c、</p>
+    <h2>3、虚拟dom是如何提升vue的渲染效率的？</h2>
+    <p>1、局部更新（节点数据）</p>
+    <p>2、将直接操作dom的地方拿到两个js对象</p>
+    <script></script>
+  </body>
 </html>
