--- a/src/html/手写Promise.html
+++ b/src/html/手写Promise.html
@@ -1,80 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
-</head>
+  <body>
+    <h2>手写Promise</h2>
+    <script>
+      //1. 基础架构
+      function myPromise(excutor) {
+        let self = this;
+        self.status = "pendding"; //等待状态
+        self.value = null; //成功的结果
+        self.reason = null; //失败的原因
 
-<body>
-  <h2>手写Promise</h2>
-  <script>
-    //1. 基础架构
-    function myPromise(excutor) {
-      let self = this
-      self.status = 'pendding' //等待状态
-      self.value = null //成功的结果
-      self.reason = null //失败的原因
+        self.onFulfilledCallbacks = [];
+        self.onRejectedCallbacks = [];
 
-      self.onFulfilledCallbacks = []
-      self.onRejectedCallbacks = []
+        //成功的回调
+        function resolve(value) {
+          //4.状态处理
+          if (self.status === "pendding") {
+            self.value = value; //保存成功的结果
+            self.status = "fulfilled";
+            //7.状态改变 依次取出
+            self.onFulfilledCallbacks.forEach((item) => item(value));
+          }
+        }
 
-      //成功的回调
-      function resolve(value) {
-        //4.状态处理
-        if (self.status === 'pendding') {
-          self.value = value //保存成功的结果
-          self.status = 'fulfilled'
-          //7.状态改变 依次取出
-          self.onFulfilledCallbacks.forEach(item => item(value))
+        //失败的回调
+        function reject(reason) {
+          //4.状态处理
+          if (self.status === "pendding") {
+            self.reason = reason;
+            self.status = rejected;
+            //7.状态改变 依次取出
+            self.onRejectedCallbacks.forEach((item) => item(reason));
+          }
+        }
+
+        //3.立即执行
+        try {
+          excutor(resolve, reject);
+        } catch (error) {
+          reject(error);
         }
       }
 
-      //失败的回调
-      function reject(reason) {
-        //4.状态处理
-        if (self.status === 'pendding') {
-          self.reason = reason
-          self.status = rejected
-          //7.状态改变 依次取出
-          self.onRejectedCallbacks.forEach(item => item(reason))
+      //2. then方法
+      myPromise.prototype.then = function (onFulfilled, onRejected) {
+        //5.状态改变，走.then方法
+        onFulfilled =
+          typeof onFulfilled === "function"
+            ? onFulfilled
+            : function (data) {
+                resolve(data);
+              };
+        onRejected =
+          typeof onRejected === "function"
+            ? onRejected
+            : function (error) {
+                throw error;
+              };
+
+        //发布订阅模式 6.
+        console.log(this.status);
+        if (this.status === "pendding") {
+          this.onFulfilledCallbacks.push(onFulfilled);
+          this.onRejectedCallbacks.push(onRejected);
         }
-      }
+      };
 
-      //3.立即执行
-      try {
-        excutor(resolve, reject)
-      } catch (error) {
-        reject(error)
-      }
+      const demo = new myPromise((resolve, reject) => {
+        console.log("fisk hello");
+        setTimeout(() => {
+          resolve(123);
+        }, 2000);
+      });
 
-    }
-
-    //2. then方法
-    myPromise.prototype.then = function (onFulfilled, onRejected) {
-      //5.状态改变，走.then方法
-      onFulfilled = typeof onFulfilled === "function" ? onFulfilled : function (data) { resolve(data) }
-      onRejected = typeof onRejected === "function" ? onRejected : function (error) { throw error }
-
-      //发布订阅模式 6.
-      console.log(this.status);
-      if (this.status === 'pendding') {
-        this.onFulfilledCallbacks.push(onFulfilled)
-        this.onRejectedCallbacks.push(onRejected)
-      }
-    }
-
-    const demo = new myPromise((resolve, reject) => {
-      console.log('fisk hello');
-      setTimeout(() => {
-        resolve(123)
-      }, 2000);
-    })
-
-    demo.then(data => console.log(data))
-  </script>
-</body>
-
+      demo.then((data) => console.log(data));
+    </script>
+  </body>
 </html>
