--- a/src/html/动画.html
+++ b/src/html/动画.html
@@ -27,7 +27,6 @@
 				height: 100px;
 				background: #f1c40f;
 				animation: move 5s;
-				animation-fill-mode: forwards;
 			}
 
 			@keyframes move {
@@ -44,14 +43,22 @@
 				height: 100px;
 				background: #c3e;
 				animation: show 5s;
+				animation-fill-mode: forwards;
 			}
 			@keyframes show {
 				0% {
 					transform: scale(0);
 				}
-				100% {
+				80% {
 					transform: scale(1);
 				}
+				100% {
+					border-radius: 50%;
+					transform: scale(0.5);
+				}
+				/* 100% {
+					transform: scale(1);
+				} */
 			}
 		</style>
 	</head>
